Important Changes Made!

--- a/src/main/resources/assets/lostmandaringod/lang/en_us.json
+++ b/src/main/resources/assets/lostmandaringod/lang/en_us.json
@@ -4,6 +4,7 @@
 
   "item.lostmandaringod.metal_detector": "Metal Detector",
   "block.lostmandaringod.sound_block": "Sound Block",
+  "item.lostmandaringod.lost_crystal_staff": "Lost Crystal Staff",
 
   "item.lostmandaringod.raw_lost_crystal": "Raw Lost Crystal",
   "item.lostmandaringod.lost_crystal": "Lost Crystal",
